[project]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuri Cardoso"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (1.45.1)",
    "pandas (2.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode = false
